# PlantRoot

./: BoostMetaGraph.cpp  BoostMetaGraph.h  BoostMetaGraphInteractions.cpp  BoostMetaGraphSettings.cpp  BoostSkeleton.cpp  BoostSkeleton.h  CMakeLists.txt  ExposedMetaEdge.cpp  ExposedMetaEdge.h  Face.cpp  Face.h  Geometry.cpp  Geometry.h  GraphGL.cpp  GraphGL.h  HierarchicalRoot.cpp  HierarchicalRoot.h  IssuesGL.cpp  IssuesGL.h  Listener.h  Mesh.cpp  Mesh.h  MetaEdge.cpp  MetaEdge.h  MetaGraph.cpp  MetaGraph.h  MetaNode.cpp  MetaNode.h  MetaNodeFactory.cpp  Node.h  PythonModule.h  README.md  RootAttributes.cpp  RootAttributes.h  RootMain.cpp  Skeleton.cpp  Skeleton.h  SkeletonEdge.cpp  SkeletonEdge.h  SkeletonShortestPath.cpp  (+6 more)
archive/: Listener.h  MetaEdge.cpp  MetaEdge.h  MetaGraph.cpp  MetaGraph.h  MetaNode.h  MetaNodeFactory.cpp  MetaNodeFactory.h  Node.h  Skeleton.cpp  Skeleton.h  SkeletonEdge.cpp
